# llms-txt

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile.agent  Makefile  README.md  build.sh  entrypoint.sh  index.html  main.js  pyproject.toml  styles.css
docs/: api.md  architecture.md  deploy.md  endpoints.md
docs/demo/: README.md
infra/: data.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
plans/: 00-overview.md  01-terraform-storage.md  02-lambda-handler.md  03-storage-service.md  04-models-constants-prompts.md  05-embeddings-service.md  06-pinecone-service.md  07-agent-factory-hooks.md  08-crawl-agent.md  09-report-compare-foundations.md  10-ui-planner-agent.md  11-reporter-agent.md  12-comparer-agent.md  13-search-endpoint.md  14-frontend-ui.md  15-project-tooling.md  16-observability-logging.md  17-terraform-hosting.md  18-codex-support.md  19-scheduled-recrawl.md  20-cloudfront-auth.md  21-ui-implementer-agent.md  22-ecs-fargate-infra.md  README.md  history-page-improvements.md  report-compare-ui-improvements.md
scripts/: create_test_job.py
src/: constants.py  handler.py  index.html  models.py  prompts.py
src/agents/: comparer.py  crawler.py  implementer.py  (+2 more)
tests/: conftest.py  test_comparer.py  test_crawler.py  test_crawler_task.py  test_embeddings.py  test_fargate.py  test_handler.py  test_helpers.py  test_implementer.py  test_llm.py  test_logger.py  test_models.py  test_pinecone_client.py  test_reporter.py  test_scheduled_recrawl.py  test_search.py  test_storage.py  test_tasks.py  test_tools.py  test_ui_planner.py  test_ui_planner_task.py
ui/: index.html
(+52 files in other folders)
