[project]
name = "llms-txt-crawler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic",           # direct Anthropic API; built-in web_search/web_fetch run server-side
    "boto3",               # S3, DynamoDB, Secrets Manager, Bedrock Titan embeddings
    "fastapi",
    "mangum",              # ASGI adapter — lets API Gateway invoke the FastAPI app as Lambda
    "uvicorn[standard]",   # local dev server
    "pinecone-client",
    "openai-agents>=0.0.9",
    "httpx>=0.27.0",
    "html2text>=2020.1.16",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",               # required by FastAPI TestClient
    "moto[s3,dynamodb]",   # AWS mocking for tests
    "pytest-mock",
    "ruff",
]
